# src/routes.js
@@ -6,6 +6,7 @@ import * as clipboard from "./controllers/clipboard.js";
 import * as email from "./controllers/email.js";
 import * as config from "./controllers/config.js";
 import * as coze from "./controllers/coze.js";
+import * as blog from "./controllers/blog.js";
 
 const router = new Router()
   .prefix("/api/v1")
@@ -26,5 +27,8 @@ const router = new Router()
   .post("/clipboard", clipboard.saveById)
   // coze
   .get("/coze/token", coze.token)
+  // blog counter
+  .get("/blog-view", blog.view)
+  .get("/popular-posts", blog.getPopularPosts)
 
 export default router;
